[project]
name = "interview-analytics-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "dist", "build", ".backup_*"]

[tool.ruff.lint]
select = ["E","F","W","I","UP","B","SIM","C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "preserve"
